--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -29,5 +29,6 @@ jobs:
         env:
           USERNAME: ${{ github.actor }}
           TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          MAVEN_PACKAGE_REGISTRY_URL: https://maven.pkg.github.com/${{ secrets.GITHUB_REPOSITORY }}
+          MAVEN_PACKAGE_REGISTRY_URL: https://maven.pkg.github.com/
+          REPOSITORY_URL: ${{ secrets.GITHUB_REPOSITORY }}
           GITHUB_REF: ${{ github.ref }}
