add junit5 dependency to testImplementation

--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -5,9 +5,9 @@ name: Gradle Package
 
 on:
   push:
-    tags: [ v* ]
     branches: [ main, feature-* ]
-
+  release:
+    types: [published]
 jobs:
   build:
 
